--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "gatsby": "5.4.1",
+    "gatsby-omni-font-loader": "2.0.2",
     "gatsby-plugin-postcss": "6.4.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-helmet": "6.1.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
