--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "5.4.1",
     "gatsby-omni-font-loader": "2.0.2",
     "gatsby-plugin-postcss": "6.4.0",
+    "gatsby-plugin-react-svg": "3.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
