--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json}": [
+      "eslint src/",
+      "prettier --write --ignore-unknown"
+    ]
   },
   "dependencies": {
     "gatsby": "5.4.1",
@@ -29,6 +36,12 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "8.32.0",
+    "eslint-plugin-react": "7.32.1",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0",
     "prettier": "2.8.3",
     "typescript": "4.9.4"
   }
