--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-const-case": "1.2.2",
+    "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-react": "7.32.1",
     "husky": "8.0.3",
     "lint-staged": "13.1.0",
