--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ node_modules/
 public
 src/gatsby-types.d.ts
 .env.development
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
