--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ]
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "3.3.4",
     "gatsby": "5.4.1",
     "gatsby-omni-font-loader": "2.0.2",
     "gatsby-plugin-postcss": "6.4.0",
@@ -32,8 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-hook-form": "^7.49.3",
-    "zod": "^3.22.4"
+    "react-hook-form": "7.49.3",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
