feat(api): implement a commond API client

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.3.4",
+    "axios": "1.6.7",
     "gatsby": "5.4.1",
     "gatsby-omni-font-loader": "2.0.2",
     "gatsby-plugin-postcss": "6.4.0",
